1999-05-13  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/builtins.c (Maximize): Call SetBorder when maximizing,
	otherwise doing "Maximize Tall" from a module may forget
	to update the maximize button.

1999-05-13 Hippo

	* fvwm/{lots} New command "DefaultBackground":
	understands TiledPixmap <pixmap>. With no args uses DefaultColors.
	Used by some modules.

1999-05-13  Dan Espen  <dane@mk.bellcore.com>

	* INSTALL.fvwm (Configuration File): Clear up distinction between
	$sysconfdir and $sysconfdir/fvwm.

1999-05-12  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/menus.c (do_menu): set *ret_paction to NULL after 
	freeing it. This fixes coredumps from do_windowList (bugs 
	#332 and #339).
	
1999-05-12  Dan Espen  <dane@mk.bellcore.com>

	* INSTALL.fvwm (Configuration File): Some clarification on config files
	that are installed.  $sysconfdir is ${prefix}/etc/fvwm.

	* fvwm/fvwm2.1 (INITIALIZATION): Correct typo and facts about
	startup.

1999-05-12  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/builtins.c (Maximize): make windows go back to their 
	original location upon unmaximization again. 

1999-05-11  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/fvwm.h (style_flags): new member icon_override. 

	* fvwm/style.h (SICON_OVERRIDE): macro to access icon_override.

	* fvwm/style.c (ProcessNewStyle): new style option
	IconOverride/NoActiveIconOverride/NoIconOverride sets
	icon_override.
	
	* fvwm/add_window.c (AddWindow): change logic for determining 
	the icon. It uses the icon_override style flag now.

	* NEWS:
	* fvwm/fvwm2.1: document IconOverride/NoIconOverride/
	NoActiveIconOverride. This fixes bug #333.

1999-05-10  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c (paint_menu_item): take sidepic into account for right
	justified items
	(MiWarpPointerToItem): fixed warping to first item after multiple
	titles or separators
	(MakeMenu): titles count for complete item width, not just the left